--- a/dummySbrigit/src/main/resources/templates/addDriver.html
+++ b/dummySbrigit/src/main/resources/templates/addDriver.html
@@ -151,6 +151,13 @@
 
             </div>
             <div class="row">
+              <label class="mb-2 text-capitalize">Password</label>
+              <div class="mb-4">
+                <input type="text" name="password" placeholder="Type here" class="form-control form-control-sm" required="">
+              </div>
+
+            </div>
+            <div class="row">
               <label class="mb-2 text-capitalize">Choose Image</label>
               <div class="mb-4">
                 <input type="file" name="imgUrl" placeholder="Type here" class="form-control form-control-sm">
