--- a/dummySbrigit/src/main/resources/templates/index.html
+++ b/dummySbrigit/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                         <div class="d-md-none front_logo">
                             <img src="assets/img/logo.svg" alt="Sbrigit" width="249"/>
                         </div>
-                        <form class="w-100" action="/login">
+                        <form class="w-100" action="/login1">
                             <div class="title_group text-left mb-4 pb-3"> 
                                 <h1 class="h1 mb-3">Login</h1>
                                 <p>Welcome back! Please enter your details.</p>
@@ -68,12 +68,19 @@
                                 </button>
                             </div>
 
+
                         </form>
+                        <div class="pt-3">
+                          <a href="/addDriver"><button class="py-md-3 w-100 btn btn-lg btn-primary"  >
+                                Register as Driver
+                            </button></a>
+                        </div>
                     </div>
                 </div>
             </div>            
         </div>
     </div>
+
     <!--  End Login Page -->
 
     <!-- Script -->
